# qml-lab

./: .clang-format  .clang-tidy  .gitignore  .qmlls.ini  CMakeCache.txt  CMakeLists.txt  Dockerfile  QML模組配置技術筆記.md  qml-coach-prompt.md
.github/: copilot-instructions.md
cmake/: compiler-warnings.cmake  generate-sources.sh  sources.cmake  sources_and_headers-linux.cmake  standard-settings.cmake  static-analyzers.cmake  utils.cmake
doc/: qml_readability_example.md
src/app/: main.cpp
src/app/qml/: Main.qml
src/custom-qml/: main.cpp
src/custom-qml/qml/: Main.qml  TextBotton.qml
src/hello-qml/: main.cpp
src/intro-quick/: main.cpp
src/intro-quick/qml/: Main.qml  Main2.qml
src/pos-layout/: main.cpp
src/pos-layout/qml/: Main.qml
src/qobject-tree/: application_window.cpp  application_window.h  main.cpp
src/signal-slot/: firefox.cpp  firefox.h  internet_explorer.cpp  internet_explorer.h  main.cpp  user_interactor.cpp  user_interactor.h
src/song-player/: audio_info.cpp  audio_info.h  main.cpp  player_controller.cpp  player_controller.h
src/song-player-with-http/: AudioSearchModel.cpp  AudioSearchModel.h  PlayerController.cpp  main.cpp
src/song-player-with-http/qml/: AudioInfoBox.qml  PlaylistPanel.qml  SearchField.qml  SearchPanel.qml  main.qml
src/song-player/qml/: AudioInfoBox.qml  ImageBotton.qml  Main.qml
